--- a/src/BlazorTasks/Layout/MainLayout.razor
+++ b/src/BlazorTasks/Layout/MainLayout.razor
@@ -1,3 +1,8 @@
 ﻿@inherits LayoutComponentBase
-
-@Body
+<div class="page">
+    <main>
+        <article class="content px-4">
+            @Body
+        </article>
+    </main>
+</div>
